--- a/index.html
+++ b/index.html
@@ -2,10 +2,18 @@
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
   <title>Circle Shader</title>
   <style>
-    body, html { margin: 0; padding: 0; overflow: hidden; }
-    canvas { display: block; width: 100vw; height: 100vh; }
+    html, body {
+      margin: 0; padding: 0;
+      width: 100%; height: 100%;
+      overflow: hidden;
+    }
+    canvas {
+      display: block;
+      width: 100%; height: 100%;
+    }
   </style>
 </head>
 <body>
